feat(cart): add new api
